php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #14544 Bogus warning: Trying to raise a nonpositive value to a broken power
Submitted: 2001-12-16 05:21 UTC Modified: 2001-12-16 18:41 UTC
From: drowland at bigpond dot net dot au Assigned:
Status: Closed Package: Math related
PHP Version: 4.1.0 OS: Red Hat Linux 7.1
Private report: No CVE-ID: None
 [2001-12-16 05:21 UTC] drowland at bigpond dot net dot au
When running the following on php 4.1.0:

<? echo pow(abs(-00.00),.5); ?>

I receive the following error:

Warning: Trying to raise a nonpositive value to a broken power in /var/www/bnt3/test2.php on line 1

Given the abs function, there should be no way that it is a nonpositive value.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-12-16 05:38 UTC] derick@php.net
Fixed in CVS, thanks for the report!

Derick
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 18 20:00:01 2026 UTC