- Fix for bug #14544, bogus warning in pow() #- I think I do not need to tell who screwed this up....

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@65269 c90b9560-bf6c-de11-be94-00142212c4b1